Build EntsoEClient